--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,4 +3,5 @@
     <color name="gray">#8E8E93</color>
     <color name="graywhite">#F2F2F7</color>
     <color name="green">#219653</color>
+    <color name="abuputih">#E4E4E4</color>
 </resources>
