--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -13,12 +13,13 @@
         tools:context=".ui.dashboard.DashboardFragment">
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="60sp"
             android:background="@drawable/bgheader"
-            app:layout_constraintEnd_toEndOf="parent"
             android:paddingLeft="24sp"
             android:paddingRight="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -27,33 +28,85 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/pin"/>
+                    android:background="@drawable/pin" />
 
                 <TextView
+                    android:id="@+id/txtlokasi"
+                    android:maxLines="2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/inter"
                     android:layout_marginLeft="12sp"
-                    android:textSize="17sp"
+                    android:fontFamily="@font/inter"
+                    android:text="Sedang mencari lokasi"
                     android:textColor="@color/white"
-                    android:text="Sedang mencari lokasi" />
+                    android:textSize="17sp" />
             </LinearLayout>
         </RelativeLayout>
+
         <TextView
-            android:id="@+id/text_dashboard"
-            android:layout_width="match_parent"
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAlignment="center"
-            android:textSize="20sp"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="20sp"
+            android:fontFamily="@font/inter_semibold"
+            android:text="Toko Terdekat"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmertoko"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_marginTop="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:shimmer_repeat_mode="restart"
+            app:shimmer_shape="radial">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:orientation="vertical">
+
+                <include layout="@layout/slidershimmer" />
+
+                <include layout="@layout/slidershimmer" />
+
+                <include layout="@layout/slidershimmer" />
+
+            </LinearLayout>
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvtoko"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_margin="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <TextView
+            android:id="@+id/txtnodata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inter_semibold"
+            android:text="Tidak ada toko di dekat lokasi anda"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
