--- a/app/src/main/res/layout/activity_detail_barang_toko.xml
+++ b/app/src/main/res/layout/activity_detail_barang_toko.xml
@@ -157,7 +157,7 @@
                 </RelativeLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btninsert"
+                    android:id="@+id/btnupdate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40sp"
